--- a/newsletter.html
+++ b/newsletter.html
@@ -43,7 +43,7 @@
       <label for="e-mail" class="last-name">E-mail</label>
       <input id="e-mail" type="text" />
 
-      <button class="send-button">Submit</button>
+      <button class="send-button forms-button">Submit</button>
     </form>
   </main>
   <footer></footer>
