article page responsive

--- a/article.html
+++ b/article.html
@@ -50,9 +50,7 @@
     est laborum.Lorem ipsum dolor sit amet, consectetur.
   </p>
   <article>
-    <section class="image">
-      <img src="img/6e080d35784777.5703c948cde16.png" alt="map" />
-    </section>
+   
     <section class="cards-place"></section>
     <!-- <section class="card">
       <div class="img-container">
@@ -111,18 +109,17 @@
   </article>
   <template>
     <section class="card">
-      <div class="img-container">
         <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-      </div>
+  
       <div class="text-column">
         <h2>Location's name</h2>
         <p class="address">Address</p>
-        <p class="description">
+        <div class="description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip ex ea commodo consequat.
-        </p>
+        </div>
         <a href="#" class="typography-sample category">
           <p>Category</p>
         </a>
