--- a/area-list.html
+++ b/area-list.html
@@ -21,7 +21,6 @@
                                 <a class="menulink" href="index.html">Home</a></button>
                                 <a class="menulink" href="category-list.html">Categories</a>
                                 <a class="menulink" href="area-list.html">Areas</a>
-                                <!-- <a class="menulink" href="#">Discover weekly</a> -->
                                 <a class="menulink" href="about.html">About</a>
                                 <a class="menulink" href="newsletter.html">Newsletter</a>
                                 </ul>
@@ -44,49 +43,49 @@
 
                         <a href="article.html?q={&quot;Area&quot;: &quot;Amager&quot;}">
                                 <article class="category">
-                                        <img src="img/mustsee.svg" alt="" class="categoryimage">
+                                        <img src="img/ama.svg" alt="" class="categoryimage">
                                         <h2 class="categoryname">Amager</h2>
                                 </article>
                         </a>
 
                         <a href="article.html?q={&quot;Area&quot;: &quot;Bispebjerg&quot;}">
                                 <article class="category">
-                                        <img src="img/insta.svg" alt="" class="categoryimage">
+                                        <img src="img/bispebjerg.svg" alt="" class="categoryimage">
                                         <h2 class="categoryname">Bispebjerg</h2>
                                 </article>
                         </a>
 
                         <a href="article.html?q={&quot;Area&quot;: &quot;Østerbro&quot;}">
                                 <article class="category">
-                                        <img src="img/history.svg" alt="" class="categoryimage">
+                                        <img src="img/osterbro.svg" alt="" class="categoryimage">
                                         <h2 class="categoryname">Østerbro</h2>
                                 </article>
                         </a>
 
                         <a href="article.html?q={&quot;Area&quot;: &quot;Nørrebro&quot;}">
                                 <article class="category">
-                                        <img src="img/architecture.svg" alt="" class="categoryimage">
+                                        <img src="img/norrebro.svg" alt="" class="categoryimage">
                                         <h2 class="categoryname">Nørrebro</h2>
                                 </article>
                         </a>
 
                         <a href="article.html?q={&quot;Area&quot;: &quot;Frederiksberg&quot;}">
                                 <article class="category">
-                                        <img src="img/museum.svg" alt="" class="categoryimage">
+                                        <img src="img/frederiksberg.svg" alt="" class="categoryimage">
                                         <h2 class="categoryname">Frederiksberg</h2>
                                 </article>
                         </a>
 
                         <a href="article.html?q={&quot;Area&quot;: &quot;Vesterbro&quot;}">
                                 <article class="category">
-                                        <img src="img/parks.svg" alt="" class="categoryimage">
+                                        <img src="img/vesterbro.svg" alt="" class="categoryimage">
                                         <h2 class="categoryname">Vesterbro</h2>
                                 </article>
                         </a>
 
                         <a href="article.html?q={&quot;Area&quot;: &quot;Indre By&quot;}">
                                 <article class="category">
-                                        <img src="img/entertainment.svg" alt="" class="categoryimage">
+                                        <img src="img/innerby.svg" alt="" class="categoryimage">
                                         <h2 class="categoryname">Indre By</h2>
                                 </article>
                         </a>
