--- a/about.html
+++ b/about.html
@@ -4,40 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
     <title>About</title>
   </head>
-
   <body>
     <header>
       <div class="menu-container">
-        <img src="img/logo.svg" alt="logo" class="logo" />
 
-        <nav class="menu">
-          <button class="navbutton"><a class="menulink" href="index.html">Home</a></button>
-          <div class="dropdown">
-                  <button class="explore">Explore</button>
-                  <ul>
-                    <li><a class="menulink" href="category-list.html">Categories</a></li>
-                    <li><a class="menulink" href="#">Areas</a></li>
-                    <li><a class="menulink" href="#">Discover weekly</a></li>
-                </ul>
+              <img src="img/logo.svg" alt="logo" class="logo">
+
+              <nav class="menu">
+                      <a class="menulink" href="index.html">Home</a></button>
+                      <a class="menulink" href="category-list.html">Categories</a>
+                      <a class="menulink" href="area-list.html">Areas</a>
+                      <!-- <a class="menulink" href="#">Discover weekly</a> -->
+                      <a class="menulink" href="about.html">About</a>
+                      <a class="menulink" href="newsletter.html">Newsletter</a>
+                      </ul>
+              </nav>
+
+              <div class="hamburger">
+                      <div class="line1"></div>
+                      <div class="line2"></div>
+                      <div class="line3"></div>
               </div>
-          <button class="navbutton"><a class="menulink" href="about.html">About</a></button>
-          <button class="navbutton"><a class="menulink" href="newsletter.html">Newsletter</a></button>
-      </ul>
-  </nav>
 
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
       </div>
-    </header>
-    <div class="about-heading-wrapper">
-      <h1 class="about-wrap-heading">About us</h1>
+</header>
+    <div class="about-heading-wrapper"></div>
+    <div class="about-container">
+    <h1 class="about-wrap-heading">About us</h1>
     </div>
     <main class="about-main">
       <div class="column-about-content">
@@ -63,7 +60,7 @@
         </p>
         <img
           class="about-page-image"
-          src="img/the-round-tower-2762438_1920.jpg"
+          src="/img/about-page-img.jpg"
           alt="text"
         />
         <h3 class="about-subhead">Get in touch</h3>
@@ -81,6 +78,5 @@
         </form>
       </div>
     </main>
-    <footer></footer>
   </body>
 </html>
