--- a/newsletter.html
+++ b/newsletter.html
@@ -5,48 +5,46 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/nav.css" />
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/nav.css">
   <title>Newsletter</title>
 </head>
-
 <body class="newsletter-page">
   <header>
     <div class="menu-container">
 
-      <img src="img/logo.svg" alt="logo" class="logo">
+            <img src="img/logo.svg" alt="logo" class="logo">
 
-      <nav class="menu">
-        <a class="menulink" href="index.html">Home</a></button>
-        <a class="menulink" href="category-list.html">Categories</a>
-        <a class="menulink" href="area-list.html">Areas</a>
-        <!-- <a class="menulink" href="#">Discover weekly</a> -->
-        <a class="menulink" href="about.html">About</a>
-        <a class="menulink" href="newsletter.html">Newsletter</a>
-        </ul>
-      </nav>
+            <nav class="menu">
+                    <a class="menulink" href="index.html">Home</a></button>
+                    <a class="menulink" href="category-list.html">Categories</a>
+                    <a class="menulink" href="area-list.html">Areas</a>
+                    <!-- <a class="menulink" href="#">Discover weekly</a> -->
+                    <a class="menulink" href="about.html">About</a>
+                    <a class="menulink" href="newsletter.html">Newsletter</a>
+                    </ul>
+            </nav>
 
-      <div class="hamburger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
+            <div class="hamburger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+            </div>
 
     </div>
-  </header>
+</header>
   <main class="newsletter-main">
     <h1 class="news-heading">
       Join us today and let us inspire you on the journey to become a true
       Copenhagener.
     </h1>
     <form class="newsletter-signup">
-      <label for="e-mail" class="last-name">E-mail</label>
+      <label for="e-mail" class="last-name">E-mail : </label>
       <input id="e-mail" type="text" />
 
-      <button class="send-button forms-button">Submit</button>
+      <button class="forms-button">Submit</button>
     </form>
   </main>
   <footer></footer>
 </body>
-
 </html>
