--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         </p>
         <img
           class="about-page-image"
-          src="/img/about-page-img.jpg"
+          src="img/about-page-img.jpg"
           alt="text"
         />
         <h3 class="about-subhead">Get in touch</h3>
