final index iteration + footer and header margin

--- a/about.html
+++ b/about.html
@@ -1,86 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <title>About</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="menu-container">
-        <img src="img/logo.svg" alt="logo" class="logo" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/nav.css" />
+  <title>About</title>
+</head>
 
-        <nav class="menu">
-          <button class="navbutton"><a class="menulink" href="index.html">Home</a></button>
-          <div class="dropdown">
-                  <button class="explore">Explore</button>
-                  <ul>
-                    <li><a class="menulink" href="category-list.html">Categories</a></li>
-                    <li><a class="menulink" href="#">Areas</a></li>
-                    <li><a class="menulink" href="#">Discover weekly</a></li>
-                </ul>
-              </div>
-          <button class="navbutton"><a class="menulink" href="about.html">About</a></button>
-          <button class="navbutton"><a class="menulink" href="newsletter.html">Newsletter</a></button>
-      </ul>
-  </nav>
+<body>
+  <header>
+    <div class="menu-container">
+      <img src="img/logo.svg" alt="logo" class="logo" />
 
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
+      <nav class="menu">
+        <button class="navbutton"><a class="menulink" href="index.html">Home</a></button>
+        <div class="dropdown">
+          <button class="explore">Explore</button>
+          <ul>
+            <li><a class="menulink" href="category-list.html">Categories</a></li>
+            <li><a class="menulink" href="#">Areas</a></li>
+            <li><a class="menulink" href="#">Discover weekly</a></li>
+          </ul>
         </div>
+        <button class="navbutton"><a class="menulink" href="about.html">About</a></button>
+        <button class="navbutton"><a class="menulink" href="newsletter.html">Newsletter</a></button>
+        </ul>
+      </nav>
+
+      <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
       </div>
-    </header>
-    <div class="about-heading-wrapper">
-      <h1 class="about-wrap-heading">About us</h1>
     </div>
-    <main class="about-main">
-      <div class="column-about-content">
-        <h2 class="about-heading">CONCEPT</h2>
-        <p class="about-p">
-          We are Justina, Agata, Maria and Caroline. Curious, adventurous and
-          always in pursuit of great sights, events and happenings in the
-          bustling city of Copenhagen. We have created this project website as a
-          way for us to share all the best the city has to offer to any other
-          foreign newcomers who needs a reliable, direct source for all the
-          relevant information needed, displayed in a simple format.
-        </p>
-        <h2 class="about-heading">PURPOSE</h2>
-        <p class="about-p">
-          We want to give you the inside scoop on the latest hot spots, hidden
-          gems and all the other wonderful things there is to see in the city,
-          through the eyes of a true local. Arriving in a new country can be an
-          at times overwhelming and daunting task, and it is in our interest to
-          make that journey and transition a bit easier. We hope you'll all find
-          our site useful and can help bring you one step closer to understand
-          the community, cutlure and gain you many newcomers one of a kind and
-          memorable experiences in Copenhagen.
-        </p>
-        <img
-          class="about-page-image"
-          src="img/the-round-tower-2762438_1920.jpg"
-          alt="text"
-        />
-        <h3 class="about-subhead">Get in touch</h3>
-        <form class="get-in-touch">
-          <label for="firstName" class="first-name">First Name</label>
-          <input id="firstName" type="text" />
+  </header>
+  <div class="about-heading-wrapper">
+    <h1 class="about-wrap-heading">About us</h1>
+  </div>
+  <main class="about-main">
+    <div class="column-about-content">
+      <h2 class="about-heading">CONCEPT</h2>
+      <p class="about-p">
+        We are Justina, Agata, Maria and Caroline. Curious, adventurous and
+        always in pursuit of great sights, events and happenings in the
+        bustling city of Copenhagen. We have created this project website as a
+        way for us to share all the best the city has to offer to any other
+        foreign newcomers who needs a reliable, direct source for all the
+        relevant information needed, displayed in a simple format.
+      </p>
+      <h2 class="about-heading">PURPOSE</h2>
+      <p class="about-p">
+        We want to give you the inside scoop on the latest hot spots, hidden
+        gems and all the other wonderful things there is to see in the city,
+        through the eyes of a true local. Arriving in a new country can be an
+        at times overwhelming and daunting task, and it is in our interest to
+        make that journey and transition a bit easier. We hope you'll all find
+        our site useful and can help bring you one step closer to understand
+        the community, cutlure and gain you many newcomers one of a kind and
+        memorable experiences in Copenhagen.
+      </p>
+      <img class="about-page-image" src="img/the-round-tower-2762438_1920.jpg" alt="text" />
+      <h3 class="about-subhead">Get in touch</h3>
+      <form class="get-in-touch">
+        <label for="firstName" class="first-name">First Name</label>
+        <input id="firstName" type="text" />
 
-          <label for="lastName" class="last-name">Last Name</label>
-          <input id="lastName" type="text" />
+        <label for="lastName" class="last-name">Last Name</label>
+        <input id="lastName" type="text" />
 
-          <label for="email" class="last-name">E-mail</label>
-          <input id="email" type="text" />
+        <label for="email" class="last-name">E-mail</label>
+        <input id="email" type="text" />
 
-          <button class="submit-button">Submit</button>
-        </form>
-      </div>
-    </main>
-    <footer></footer>
-  </body>
+        <button class="submit-button">Submit</button>
+      </form>
+    </div>
+  </main>
+  <footer>
+    <p>&copy; Agata Figura, Caroline Wulff, Justina Jemeljanovaite, Maria Lavinia Otelea, Copenhagen School of
+      Design and Technology – KEA, 2021</p>
+    <div class="soMe">
+      <a href="#"><img src="img/ig.svg" alt="instagram.com/explorecph"></a>
+      <a href="#"><img src="img/fb.svg" alt="facebook.com/explorecph"></a>
+      <a href="#"><img src="img/pinterest.svg" alt="pinterest.com/explorecph"></a></div>
+  </footer>
+</body>
+
 </html>
