--- a/category-list.html
+++ b/category-list.html
@@ -111,6 +111,15 @@
                                 </article>
                         </a>
         </main>
+        <footer>
+                <p>&copy; Agata Figura, Caroline Wulff, Justina Jemeljanovaite, Maria Lavinia Otelea, Copenhagen School
+                        of
+                        Design and Technology – KEA, 2021</p>
+                <div class="soMe">
+                        <a href="#"><img src="img/ig.svg" alt="instagram.com/explorecph"></a>
+                        <a href="#"><img src="img/fb.svg" alt="facebook.com/explorecph"></a>
+                        <a href="#"><img src="img/pinterest.svg" alt="pinterest.com/explorecph"></a></div>
+        </footer>
 
         <script src="js/nav.js"></script>
 
