--- a/newsletter.html
+++ b/newsletter.html
@@ -20,7 +20,6 @@
         <a class="menulink" href="index.html">Home</a></button>
         <a class="menulink" href="category-list.html">Categories</a>
         <a class="menulink" href="area-list.html">Areas</a>
-        <!-- <a class="menulink" href="#">Discover weekly</a> -->
         <a class="menulink" href="about.html">About</a>
         <a class="menulink" href="newsletter.html">Newsletter</a>
         </ul>
@@ -46,7 +45,14 @@
       <button class="send-button forms-button">Submit</button>
     </form>
   </main>
-  <footer></footer>
+  <footer>
+    <p>&copy; Agata Figura, Caroline Wulff, Justina Jemeljanovaite, Maria Lavinia Otelea, Copenhagen School of
+      Design and Technology – KEA, 2021</p>
+    <div class="soMe">
+      <a href="#"><img src="img/ig.svg" alt="instagram.com/explorecph"></a>
+      <a href="#"><img src="img/fb.svg" alt="facebook.com/explorecph"></a>
+      <a href="#"><img src="img/pinterest.svg" alt="pinterest.com/explorecph"></a></div>
+  </footer>
 </body>
 
 </html>
