Half-dynamic article

--- a/article.html
+++ b/article.html
@@ -39,16 +39,16 @@
     </div>
   </header>
   <p class="short-description">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
     commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
     velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
     cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-    est laborum.Lorem ipsum dolor sit amet, consectetur.
+    est laborum.Lorem ipsum dolor sit amet, consectetur. -->
   </p>
   <article>
-   
+
     <section class="cards-place"></section>
     <!-- <section class="card">
       <div class="img-container">
@@ -107,8 +107,8 @@
   </article>
   <template>
     <section class="card">
-        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-  
+      <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
+
       <div class="text-column">
         <h2>Location's name</h2>
         <p class="address">Address</p>
