Dynamics and almost final touches on call

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   </header>
   <div class="about-heading-wrapper"></div>
   <div class="about-container">
-    <h1 class="about-wrap-heading">About us</h1>
+    <h1 class="about-wrap-heading" id="header-abt">About us</h1>
   </div>
   <main class="about-main">
     <div class="column-about-content">
@@ -83,6 +83,7 @@
       <a href="#"><img src="img/fb.svg" alt="facebook.com/explorecph"></a>
       <a href="#"><img src="img/pinterest.svg" alt="pinterest.com/explorecph"></a></div>
   </footer>
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
