--- a/area-list.html
+++ b/area-list.html
@@ -38,18 +38,66 @@
 
         <main>
                 <h1>Areas</h1>
-                <section class="cards-grid area-list-section">
 
+                <section class="categories">
+
+                        <a href="article.html?q=Amager">
+                                <article class="category">
+                                        <div class="cat-img-cont"><img src="img/ama.svg" alt="" class="categoryimage">
+                                        </div>
+                                        <h2 class="categoryname">Amager</h2>
+                                </article>
+                        </a>
+
+                        <a href="article.html?q=Bispebjerg">
+                                <article class="category">
+                                        <div class="cat-img-cont"><img src="img/bispebjerg.svg" alt=""
+                                                        class="categoryimage"></div>
+                                        <h2 class="categoryname">Bispebjerg</h2>
+                                </article>
+                        </a>
+
+                        <a href="article.html?q=Østerbro">
+                                <article class="category">
+                                        <div class="cat-img-cont"><img src="img/osterbro.svg" alt=""
+                                                        class="categoryimage"></div>
+                                        <h2 class="categoryname">Østerbro</h2>
+                                </article>
+                        </a>
+
+                        <a href="article.html?q=Nørrebro">
+                                <article class="category">
+                                        <div class="cat-img-cont"><img src="img/norrebro.svg" alt=""
+                                                        class="categoryimage"></div>
+                                        <h2 class="categoryname">Nørrebro</h2>
+                                </article>
+                        </a>
+
+                        <a href="article.html?q=Frederiksberg">
+                                <article class="category">
+                                        <div class="cat-img-cont"><img src="img/frederiksberg.svg" alt=""
+                                                        class="categoryimage"></div>
+                                        <h2 class="categoryname">Frederiksberg</h2>
+                                </article>
+                        </a>
+
+                        <a href="article.html?q=Vesterbro">
+                                <article class="category">
+                                        <div class="cat-img-cont"><img src="img/vesterbro.svg" alt=""
+                                                        class="categoryimage"></div>
+                                        <h2 class="categoryname">Vesterbro</h2>
+                                </article>
+                        </a>
+
+                        <a href="article.html?q=Indre By">
+                                <article class="category">
+                                        <div class="cat-img-cont"><img src="img/innerby.svg" alt=""
+                                                        class="categoryimage"></div>
+                                        <h2 class="categoryname">Indre By</h2>
+                                </article>
+                        </a>
                 </section>
         </main>
-        <template>
-                <a href="article.html?q={&quot;Area&quot;: &quot;Amager&quot;}" class="article-link">
-                        <article class="area-cont">
-                                <img src="img/ama.svg" alt="" class="area-image">
-                                <h2 class="area-name">Amager</h2>
-                        </article>
-                </a>
-        </template>
         <footer>
                 <p>&copy; Agata Figura, Caroline Wulff, Justina Jemeljanovaite, Maria Lavinia Otelea, Copenhagen School
                         of
