--- a/category-list.html
+++ b/category-list.html
@@ -16,7 +16,6 @@
                 <div class="menu-container">
 
                         <img src="img/logo.svg" alt="logo" class="logo">
-
                         <nav class="menu">
                                 <a class="menulink" href="index.html">Home</a></button>
                                 <a class="menulink" href="category-list.html">Categories</a>
@@ -40,72 +39,82 @@
 
                 <section class="categories">
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Must-see places&quot;}">
+                        <a href="category-article.html?q=Must-see places">
                                 <article class="category">
-                                        <img src="img/mustsee.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/mustsee.svg" alt=""
+                                                        class="categoryimage"></div>
                                         <h2 class="categoryname">Must-see places</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Instagrammable spots&quot;}">
+                        <a href="category-article.html?q=Instagrammable spots">
                                 <article class="category">
-                                        <img src="img/insta.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/insta.svg" alt="" class="categoryimage">
+                                        </div>
                                         <h2 class="categoryname">Instagrammable spots</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Historial sights&quot;}">
+                        <a href="category-article.html?q=Historial sights">
                                 <article class="category">
-                                        <img src="img/history.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/history.svg" alt=""
+                                                        class="categoryimage"></div>
                                         <h2 class="categoryname">Historical sites</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Architecture objects&quot;}">
+                        <a href="category-article.html?q=Architecture objects">
                                 <article class="category">
-                                        <img src="img/architecture.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/architecture.svg" alt=""
+                                                        class="categoryimage"></div>
                                         <h2 class="categoryname">Architecture objects</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Museums&quot;}">
+                        <a href="category-article.html?q=Museums">
                                 <article class="category">
-                                        <img src="img/museum.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/museum.svg" alt=""
+                                                        class="categoryimage"></div>
                                         <h2 class="categoryname">Museums</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Parks and nature&quot;}">
+                        <a href="category-article.html?q=Parks and nature">
                                 <article class="category">
-                                        <img src="img/parks.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/parks.svg" alt="" class="categoryimage">
+                                        </div>
                                         <h2 class="categoryname">Parks and nature</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Entertainment&quot;}">
+                        <a href="category-article.html?q=Entertainment">
                                 <article class="category">
-                                        <img src="img/entertainment.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/entertainment.svg" alt=""
+                                                        class="categoryimage"></div>
                                         <h2 class="categoryname">Entertainment</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Coffee shops&quot;}">
+                        <a href="category-article.html?q=Coffee shops">
                                 <article class="category">
-                                        <img src="img/coffee.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/coffee.svg" alt=""
+                                                        class="categoryimage"></div>
                                         <h2 class="categoryname">Coffee shops</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Bars and nightlife&quot;}">
+                        <a href="category-article.html?q=Bars and nightlife">
                                 <article class="category">
-                                        <img src="img/bars.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/bars.svg" alt="" class="categoryimage">
+                                        </div>
                                         <h2 class="categoryname">Bars and nightlife</h2>
                                 </article>
                         </a>
 
-                        <a href="article.html?q={&quot;Category&quot;: &quot;Outdoor activities&quot;}">
+                        <a href="category-article.html?q=Outdoor activities">
                                 <article class="category">
-                                        <img src="img/outdoor.svg" alt="" class="categoryimage">
+                                        <div class="cat-img-cont"><img src="img/outdoor.svg" alt=""
+                                                        class="categoryimage"></div>
                                         <h2 class="categoryname">Outdoor activities</h2>
                                 </article>
                         </a>
