--- a/article.html
+++ b/article.html
@@ -35,79 +35,19 @@
     </div>
     <div class="header-img"></div>
     <div class="article-container">
-      <h1 class="article-headline">ARTICLE- COPENHAGEN</h1>
+      <h1 class="article-headline" id="area-article">ARTICLE- COPENHAGEN</h1>
     </div>
   </header>
   <p class="short-description">
-    <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-    est laborum.Lorem ipsum dolor sit amet, consectetur. -->
   </p>
   <article>
 
     <section class="cards-place"></section>
-    <!-- <section class="card">
-      <div class="img-container">
-        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-      </div>
-      <div class="text-column">
-        <h2>Location's name</h2>
-        <p class="address">Address</p>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <a href="#" class="typography-sample category">
-          <p>Category</p>
-        </a>
-      </div>
-    </section>
-    <section class="card">
-      <div class="img-container">
-        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-      </div>
-      <div class="text-column">
-        <h2>Location's name</h2>
-        <p class="address">Address</p>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <a href="#" class="typography-sample category">
-          <p>Category</p>
-        </a>
-      </div>
-    </section>
-    <section class="card">
-      <div class="img-container">
-        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-      </div>
-      <div class="text-column">
-        <h2>Location's name</h2>
-        <p class="address">Address</p>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <a href="#" class="typography-sample category">
-          <p>Category</p>
-        </a>
-      </div>
-    </section> -->
   </article>
   <template>
     <section class="card">
-      <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
+      <div class="card-img-cont">
+        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" /></div>
 
       <div class="text-column">
         <h2>Location's name</h2>
