--- a/category-article.html
+++ b/category-article.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/nav.css">
-  <title>Newsletter</title>
+  <title>Article page</title>
+  <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/nav.css" />
 </head>
 
-<body class="newsletter-page">
+<body>
   <header>
     <div class="menu-container">
 
@@ -32,20 +33,35 @@
       </div>
 
     </div>
+    <div class="header-img"></div>
+    <div class="article-container">
+      <h1 class="article-headline" id="category-article">ARTICLE- COPENHAGEN</h1>
+    </div>
   </header>
-  <main class="newsletter-main">
-    <h1 class="news-heading">
-      Join us today and let us inspire you on the journey to become a true
-      Copenhagener.
-    </h1>
-    <form class="newsletter-signup">
-      <label for="e-mail" class="last-name">E-mail : </label>
-      <input id="e-mail" type="text" />
+  <article>
 
-      <button class="forms-button">Submit</button>
-    </form>
-  </main>
-  <footer class="newsletter-foo">
+    <section class="cards-place"></section>
+  </article>
+  <template>
+    <section class="card">
+      <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
+
+      <div class="text-column">
+        <h2>Location's name</h2>
+        <p class="address">Address</p>
+        <div class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </div>
+        <a href="#" class="typography-sample category">
+          <p>Category</p>
+        </a>
+      </div>
+    </section>
+  </template>
+  <footer>
     <p>&copy; Agata Figura, Caroline Wulff, Justina Jemeljanovaite, Maria Lavinia Otelea, Copenhagen School of
       Design and Technology – KEA, 2021</p>
     <div class="soMe">
@@ -54,6 +70,7 @@
       <a href="#"><img src="img/pinterest.svg" alt="pinterest.com/explorecph"></a></div>
   </footer>
   <script src="js/nav.js"></script>
+  <script src="js/category-article.js"></script>
 </body>
 
 </html>
