Dynamics and small almost final touch ups ♥

--- a/category-article.html
+++ b/category-article.html
@@ -44,7 +44,7 @@
   </article>
   <template>
     <section class="card">
-      <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
+      <div class="card-img-cont"><img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" /></div>
 
       <div class="text-column">
         <h2>Location's name</h2>
